создание шаблонов процессов

--- a/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
@@ -310,7 +310,7 @@
                             elementPaste();
                         }
                     },{
-                        name: '#{bundle.Cancel}',
+                        name: '#{bundle.Close}',
                         img: '/escom-bpm-web/resources/icon/cancel.png'                        
                     }];
                 
@@ -400,7 +400,7 @@
                             elementPaste();
                         }
                     },{
-                        name: '#{bundle.Cancel}',
+                        name: '#{bundle.Close}',
                         img: '/escom-bpm-web/resources/icon/cancel.png',                        
                     }];
                 
