--- a/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
@@ -8,28 +8,26 @@
     <p:dialog header="#{bundle.DataNoSave}" widgetVar="confirm" width="470" height="195" modal="true" resizable="false"
               maximizable="false" closeOnEscape="true">
         <h:form>
-            <p:panelGrid columns="1"  columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank">
-                <p:panel styleClass="ui-grid-col-12">
-                    <p:panelGrid columns="2"  columnClasses="ui-grid-col-4, ui-grid-col-8" styleClass="ui-grid-col-12 ui-panelgrid-blank">
-                        <p:graphicImage id="itemIcon" value="/resources/images/info.jpg"/>
-                        <h:outputText value="#{bundle.PressSaveOrCancel}" />
-                    </p:panelGrid>
-                </p:panel>
-
-                <p:toolbar styleClass="ui-grid-col-12">
-                    <f:facet name="right">
-                        <p:commandButton value="#{bundle.ExitNoSave}" style="float:right; "
-                                         title="#{bundle.ExitWithoutSaving}"
-                                         action="#{_bean.onFinalCancelSave()}"
-                                         onclick="PF('confirm').hide();">
-                        </p:commandButton>
-                        <p:spacer width="5" />
-                        <p:commandButton value="#{bundle.Back}" style="float:right; "
-                                         title="#{bundle.GoBackCard}"
-                                         onclick="PF('confirm').hide();">
-                        </p:commandButton>
-                    </f:facet>
-                </p:toolbar>
+            <p:panelGrid columns="1"  columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank">                
+                <h:panelGrid columns="2" styleClass="ui-grid-col-12 without-spaces">
+                    <p:graphicImage id="itemIcon" value="/resources/images/info.jpg"/>
+                    <h:outputText value="#{bundle.PressSaveOrCancel}" />
+                </h:panelGrid>                
+                <p:spacer height="3"/>
+                
+                <h:panelGroup>
+                    <p:commandButton value="#{bundle.ExitNoSave}" style="float:right; "
+                                     title="#{bundle.ExitWithoutSaving}"
+                                     action="#{_bean.onFinalCancelSave()}"
+                                     onclick="PF('confirm').hide();">
+                    </p:commandButton>
+                    <p:spacer width="5" />
+                    <p:commandButton value="#{bundle.Back}" style="float:right; "
+                                     title="#{bundle.GoBackCard}"
+                                     onclick="PF('confirm').hide();">
+                    </p:commandButton>
+                </h:panelGroup>
+                                
             </p:panelGrid>
         </h:form>
     </p:dialog>
