--- a/escom-bpm-web/src/main/webapp/view/processes/types/processtype-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/types/processtype-card.xhtml
@@ -2,7 +2,8 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="/view/templ/templ-card.xhtml"
-                xmlns:f="http://xmlns.jcp.org/jsf/core">
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <ui:param name="_bean" value="#{processTypesCardBean}"/>
 
@@ -20,15 +21,16 @@
             <p:panelGrid columns="1"  styleClass="ui-panelgrid-blank ui-grid-col-12"
                          columnClasses="ui-grid-col-12">
                 <p:outputLabel value="#{bundle.Name}"/>
-                <p:inputText id="nameItem" value="#{_bean.editedItem.name}"
+                <p:inputText id="nameItem" value="#{processTypesCardBean.editedItem.name}"
                              styleClass="ui-grid-col-12"
-                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                             onkeypress="checkEsc(#{processTypesCardBean.cancelBtnName});"
                              onchange="return itemChange = 1;"
                              disabled="#{_bean.isReadOnly()}"
                              required="#{param['isRequired'] == 'true'}"
                              requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>
             </p:panelGrid>
         </p:tab>
+        
         <p:tab title="#{bundle.Settings}">
             <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces">
                 <p:outputLabel value="#{bundle.ListResults}" indicateRequired="true"/>
@@ -43,7 +45,8 @@
                     <f:facet name="targetCaption">#{bundle.Selected}</f:facet>
                 </p:pickList>
             </p:panelGrid>
-        </p:tab>
+        </p:tab>                
+        
     </ui:define>
 
     <ui:define name="childs_rights">
