--- a/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
@@ -8,81 +8,108 @@
     <ui:param name="_bean" value="#{userCardBean}"/>
 
     <ui:define name="page_body">
-        <p:tab id="cardTab" title="#{bundle.User}">  
-            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
-
-                <p:outputLabel value="#{bundle.SecondName}" indicateRequired="true"/>
-                <p:inputText id="nameItem" value="#{_bean.editedItem.secondName}" 
-                             styleClass="ui-grid-col-12"
-                             disabled="#{_bean.isReadOnly()}"
-                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
-                             required="#{param['isRequired'] == 'true'}"
-                             requiredMessage="#{bundle.Field} [#{bundle.SecondName}] #{bundle.MustBeFilled}"
-                             onchange="return itemChange = 1;">
-                    <p:ajax event="change" listener="#{_bean.makeName()}" update="visbleName" />
-                </p:inputText>
-
-                <p:outputLabel value="#{bundle.FirstName}" indicateRequired="true"/>
-                <p:inputText id="firstName" value="#{_bean.editedItem.firstName}"
-                             styleClass="ui-grid-col-12"
-                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
-                             onchange="return itemChange = 1;"
-                             disabled="#{_bean.isReadOnly()}"
-                             required="#{param['isRequired'] == 'true'}"
-                             requiredMessage="#{bundle.Field} [#{bundle.FirstName}] #{bundle.MustBeFilled}">
-                    <p:ajax event="change" listener="#{_bean.makeName()}" update="visbleName" />
-                </p:inputText>
-
-                <p:outputLabel value="#{bundle.LastName}" />
-                <p:inputText id="lastName" value="#{_bean.editedItem.lastName}"
-                             disabled="#{_bean.isReadOnly()}"
-                             styleClass="ui-grid-col-12"
-                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
-                             onchange="return itemChange = 1;">
-                    <p:ajax event="change" listener="#{_bean.makeName()}" update="visbleName" />
-                </p:inputText>
-
-                <p:outputLabel value="#{bundle.EMail}" />
-                <h:panelGroup id="emailGroup">
-                    <p:inputText id="email" value="#{_bean.editedItem.email}"
-                                 styleClass="ui-grid-col-12"
-                                 disabled="#{_bean.isReadOnly()}"
-                                 onkeypress="checkEsc(#{_bean.cancelBtnName});"
-                                 maxlength="1024"
-                                 onchange="return itemChange = 1;">
-                        <p:keyFilter regEx="/[a-zA-Zа-яА-Я_0-9\.\-@]/i" preventPaste="false"/>
-                        <f:attribute name="userId" value="#{_bean.editedItem.id}"/>
-                        <f:validator validatorId="escom.emailValidator" />
-                        <f:validator validatorId="escom.userEmailValidator" />
-                        <f:ajax event="blur" render="emailGroup" />
-                    </p:inputText>
-                </h:panelGroup>
-
-                <p:outputLabel value="#{bundle.Phone}" />
-                <p:inputMask id="phone" value="#{_bean.editedItem.phone}"
-                             disabled="#{_bean.isReadOnly()}"
-                             mask="+9 (999) 999-9999"
-                             valueChangeListener="#{_bean.onChangePhone}"
-                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
-                             onchange="return itemChange = 1;"/>
-
-                <p:outputLabel value="#{bundle.VisibleName}" indicateRequired="true"/>
-                <h:panelGroup>
-                    <p:inputText id="visbleName" value="#{_bean.editedItem.name}"
-                                 disabled="#{_bean.isReadOnly()}"
-                                 styleClass="ui-grid-col-12"
-                                 required="#{param['isRequired'] == 'true'}"                                         
-                                 requiredMessage="#{bundle.Field} [#{bundle.VisibleName}] #{bundle.MustBeFilled}"
-                                 onkeypress="checkEsc(#{_bean.cancelBtnName});"
-                                 onchange="return itemChange = 1;">
-                    </p:inputText>
-                    <p:commandButton value="#{bundle.Generate}" title="#{bundle.MakeName}"
-                                     actionListener="#{userCardBean.makeName()}"
-                                     update="visbleName"
+        <p:tab id="cardTab" title="#{bundle.User}">
+            <p:panelGrid columns="1" columnClasses="ui-grid-col-12 without-space" styleClass="ui-grid-col-12 without-spaces" >
+                <p:panelGrid columns="2" styleClass="ui-grid-col-12 without-spaces" >
+                    <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
+                        <p:outputLabel value="#{bundle.SecondName}" indicateRequired="true"/>
+                        <p:inputText id="nameItem" value="#{_bean.editedItem.secondName}" 
+                                     styleClass="ui-grid-col-12"
                                      disabled="#{_bean.isReadOnly()}"
-                                     onclick="return itemChange = 1;">                            
-                    </p:commandButton>
-                </h:panelGroup>
+                                     onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                     required="#{param['isRequired'] == 'true'}"
+                                     requiredMessage="#{bundle.Field} [#{bundle.SecondName}] #{bundle.MustBeFilled}"
+                                     onchange="return itemChange = 1;">
+                            <p:ajax event="change" listener="#{_bean.makeName()}" update="visbleName" />
+                        </p:inputText>
+
+                        <p:outputLabel value="#{bundle.FirstName}" indicateRequired="true"/>
+                        <p:inputText id="firstName" value="#{_bean.editedItem.firstName}"
+                                     styleClass="ui-grid-col-12"
+                                     onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                     onchange="return itemChange = 1;"
+                                     disabled="#{_bean.isReadOnly()}"
+                                     required="#{param['isRequired'] == 'true'}"
+                                     requiredMessage="#{bundle.Field} [#{bundle.FirstName}] #{bundle.MustBeFilled}">
+                            <p:ajax event="change" listener="#{_bean.makeName()}" update="visbleName" />
+                        </p:inputText>
+
+                        <p:outputLabel value="#{bundle.LastName}" />
+                        <p:inputText id="lastName" value="#{_bean.editedItem.lastName}"
+                                     disabled="#{_bean.isReadOnly()}"
+                                     styleClass="ui-grid-col-12"
+                                     onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                     onchange="return itemChange = 1;">
+                            <p:ajax event="change" listener="#{_bean.makeName()}" update="visbleName" />
+                        </p:inputText>
+                    </p:panelGrid>
+
+                    <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
+                        <p:outputLabel value="#{bundle.VisibleName}" indicateRequired="true"/>                        
+                        <p:inputText id="visbleName" value="#{_bean.editedItem.name}"
+                                     disabled="#{_bean.isReadOnly()}"
+                                     styleClass="ui-grid-col-12"
+                                     required="#{param['isRequired'] == 'true'}"                                         
+                                     requiredMessage="#{bundle.Field} [#{bundle.VisibleName}] #{bundle.MustBeFilled}"
+                                     onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                     onchange="return itemChange = 1;">
+                        </p:inputText>
+                        <p:commandButton value="#{bundle.Generate}" title="#{bundle.MakeName}"
+                                         actionListener="#{userCardBean.makeName()}"
+                                         update="visbleName" style="float: right;"
+                                         disabled="#{_bean.isReadOnly()}"
+                                         onclick="return itemChange = 1;">                            
+                        </p:commandButton>                        
+                    </p:panelGrid>
+                    
+                    <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
+                        <p:outputLabel value="#{bundle.EMail}" />
+                        <h:panelGroup id="emailGroup">
+                            <p:inputText id="email" value="#{_bean.editedItem.email}"
+                                         styleClass="ui-grid-col-12"
+                                         disabled="#{_bean.isReadOnly()}"
+                                         onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                         maxlength="1024"
+                                         onchange="return itemChange = 1;">
+                                <p:keyFilter regEx="/[a-zA-Zа-яА-Я_0-9\.\-@]/i" preventPaste="false"/>
+                                <f:attribute name="userId" value="#{_bean.editedItem.id}"/>
+                                <f:validator validatorId="escom.emailValidator" />
+                                <f:validator validatorId="escom.userEmailValidator" />
+                                <f:ajax event="blur" render="emailGroup" />
+                            </p:inputText>
+                        </h:panelGroup>
+                    </p:panelGrid>
+
+                    <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
+                        <p:outputLabel value="#{bundle.Phone}" />
+                        <p:inputMask id="phone" value="#{_bean.editedItem.phone}"
+                                     disabled="#{_bean.isReadOnly()}"
+                                     mask="+9 (999) 999-9999" styleClass="ui-grid-col-12"
+                                     valueChangeListener="#{_bean.onChangePhone}"
+                                     onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                     onchange="return itemChange = 1;"/>
+                    </p:panelGrid>
+                </p:panelGrid>
+                
+                <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
+                <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
+                    <p:outputLabel value="#{bundle.Post}:" />
+                    <ui:include src="/view/common/item-select-list-btn.xhtml" >
+                        <ui:param name="_itemValue" value="#{userCardBean.editedItem.staff}"/>
+                        <ui:param name="_itemLabel" value="name"/>
+                        <ui:param name="_required" value="#{true}" />
+                        <ui:param name="_disabled" value="#{userCardBean.readOnly}"/>
+                        <ui:param name="_converter" value="staffConvertor" />
+                        <ui:param name="_itemPanel" value="staffPanel"/>
+                        <ui:param name="_titleItem" value="#{bundle.Post}"/>
+                        <ui:param name="_selectorBean" value="#{staffBean}"/>
+                        <ui:param name="_items" value="#{staffBean.findAll()}"/>
+                        <ui:param name="_actionClear" value="setStaff"/>
+                        <ui:param name="_actionSelect" value="onChangeStaff"/>                    
+                        <ui:param name="_update" value=""/>
+                    </ui:include> 
+                </p:panelGrid>
+                </p:panelGrid>
             </p:panelGrid>
         </p:tab>
 
@@ -181,6 +208,10 @@
             </p:panelGrid>
         </p:tab>
 
+        <p:tab title="#{bundle.Assistants}" >
+            <ui:include src="/view/common/dict-details.xhtml"/>
+        </p:tab>
+        
         <p:tab title="#{bundle.Groups}">
             <ui:include src="/view/common/dict-item-groups.xhtml" >
                 <ui:param name="_groups" value="#{_bean.editedItem.usersGroupsList}" />
