--- a/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
@@ -47,6 +47,7 @@
                         <p:outputLabel value="#{bundle.DocTypes}:" indicateRequired="true"/>
                         <ui:include src="/view/common/item-select-list-btn.xhtml" >
                             <ui:param name="_itemValue" value="#{_bean.editedItem.docType}"/>
+                            <ui:param name="_itemLabel" value="nameEndElipse"/>
                             <ui:param name="_required" value="#{true}" />
                             <ui:param name="_disabled" value="#{_bean.isReadOnly()}"/>
                             <ui:param name="_converter" value="docsTypesConvertor" />
@@ -117,6 +118,7 @@
                         <p:outputLabel value="#{bundle.Partner}:" />
                         <ui:include src="/view/common/item-select-list-btn.xhtml" >
                             <ui:param name="_itemValue" value="#{_bean.editedItem.partner}"/>
+                            <ui:param name="_itemLabel" value="nameEndElipse"/>
                             <ui:param name="_required" value="#{false}" />
                             <ui:param name="_disabled" value="#{_bean.isReadOnly()}"/>
                             <ui:param name="_converter" value="partnersConvertor" />
