--- a/escom-bpm-web/src/main/webapp/view/messages/messages.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/messages/messages.xhtml
@@ -39,8 +39,8 @@
                     #{bundle.With}
                     <p:calendar value="#{userMsgBean.dateStart}" id="dateStart"
                                 widgetVar="dateCreateStartSearche"
-                                showHour="true" showMinute="true"
-                                navigator="true" yearRange="c-120:c+20"
+                                showHour="true" showMinute="true" pages="2"
+                                navigator="true" yearRange="c-12:c+20"
                                 disabled="#{userMsgBean.showOnlyUnread}"
                                 locale="#{sessionBean.locale}"
                                 pattern="dd.MM.yyyy HH:mm:ss"
@@ -50,7 +50,7 @@
                     #{bundle.At}
                     <p:calendar value="#{userMsgBean.dateEnd}" id="dateEnd"
                                 widgetVar="dateCreateEndSearche"
-                                navigator="true" yearRange="c-120:c+20"
+                                navigator="true" yearRange="c-12:c+20" pages="2"
                                 showHour="true" showMinute="true"
                                 disabled="#{userMsgBean.showOnlyUnread}"
                                 locale="#{sessionBean.locale}"
