доработка штатных единиц

--- a/escom-bpm-web/src/main/webapp/view/staffs/staff-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/staff-card.xhtml
@@ -15,26 +15,26 @@
                 <p:outputLabel value="#{bundle.OrgUnit}"/>                
                 <p:inputText value="#{staffCardBean.editedItem.orgUnit}" disabled="true" styleClass="ui-grid-col-12" />                
 
-                <p:outputLabel value="#{bundle.Post}"/>
+                <p:outputLabel value="#{bundle.Post}:" indicateRequired="true"/>
                 <ui:include src="/view/common/item-select-list-btn.xhtml" >
                     <ui:param name="_itemValue" value="#{_bean.editedItem.post}"/>
                     <ui:param name="_itemLabel" value="nameEndElipse"/>
-                    <ui:param name="_required" value="#{false}" />
+                    <ui:param name="_required" value="#{true}" />
                     <ui:param name="_disabled" value="#{_bean.isReadOnly()}"/>
                     <ui:param name="_converter" value="postConverter" />
-                    <ui:param name="_itemPanel" value="postPanel"/>
+                    <ui:param name="_itemPanel" value="nameItem"/>
                     <ui:param name="_titleItem" value="#{bundle.Post}"/>
                     <ui:param name="_selectorBean" value="#{postBean}"/>
                     <ui:param name="_items" value="#{postBean.findAll()}"/>
                     <ui:param name="_actionClear" value="setPost"/>
                     <ui:param name="_actionSelect" value="onPostSelected"/>
-                    <ui:param name="_update" value="#{_frm}:mainTabView:staffGroup"/>
+                    <ui:param name="_update" value=""/>
                 </ui:include>
 
-                <p:outputLabel value="#{bundle.Employee}"/>
+                <p:outputLabel value="#{bundle.Employee}:"/>
                 <ui:include src="/view/common/item-select-list-btn.xhtml" >
                     <ui:param name="_itemValue" value="#{_bean.editedItem.employee}"/>
-                    <ui:param name="_itemLabel" value="nameEndElipse"/>
+                    <ui:param name="_itemLabel" value="fullFIO"/>
                     <ui:param name="_required" value="#{false}" />
                     <ui:param name="_disabled" value="#{_bean.isReadOnly()}"/>
                     <ui:param name="_converter" value="usersConvertor" />
@@ -44,27 +44,8 @@
                     <ui:param name="_items" value="#{userBean.findAll()}"/>
                     <ui:param name="_actionClear" value="setEmployee"/>
                     <ui:param name="_actionSelect" value="onEmployeeSelected"/>
-                    <ui:param name="_update" value="#{_frm}:mainTabView:staffGroup"/>
-                </ui:include>
-                
-                <p:outputLabel value="#{bundle.Name}" indicateRequired="true"/>
-                <h:panelGroup id="staffGroup" styleClass="ui-grid-col-12">
-                    <p:inputText id="nameItem" value="#{_bean.editedItem.name}" 
-                                    styleClass="ui-grid-col-12"                                 
-                                    disabled="#{_bean.isReadOnly()}"
-                                    onkeypress="checkEsc(#{_bean.cancelBtnName});"
-                                    onchange="return itemChange = 1;"
-                                    required="#{param['isRequired'] == 'true'}"                                         
-                                    requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}">
-                    </p:inputText>
-
-                    <p:commandButton value="#{bundle.ToForm}" title="#{bundle.MakeName}"
-                                     update="staffGroup"
-                                     disabled="#{_bean.isReadOnly()}"
-                                     actionListener="#{_bean.makeName()}"
-                                     oncomplete="return itemChange = 1;">                        
-                    </p:commandButton>    
-                </h:panelGroup>
+                    <ui:param name="_update" value=""/>
+                </ui:include>                
 
             </p:panelGrid>
         </p:tab>
