--- a/escom-bpm-web/src/main/webapp/view/common/item-select-btn.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/item-select-btn.xhtml
@@ -22,14 +22,14 @@
 
         <h:panelGroup id="#{_itemPanel}">
             <div class="ui-inputgroup ui-grid-col-12">
-                <p:inputText id="item" value="#{_itemValue.fullName}" title="#{_titleItem}" styleClass="ui-grid-col-11 without-spaces"
+                <p:inputText id="#{_itemPanel}_item" value="#{_itemValue[_itemLabel]}" title="#{_titleItem}" styleClass="ui-grid-col-11 without-spaces"
                              disabled="#{_disabled}" style="color: blue;"
-                             readonly="true"
+                             readonly="true" 
                              validator="#{_bean[_validateAction]}"
                              required="#{param['isRequired'] == _required}"
                              requiredMessage="#{bundle.Field} [#{_titleItem}] #{bundle.MustBeFilled}">
                     <f:ajax event="change" render="#{_itemPanel}" />
-                    <f:attribute name="item" value="#{_itemValue}"/>
+                    <f:attribute name="#{_itemPanel}_item" value="#{_itemValue}"/>
                 </p:inputText>
 
                 <p:splitButton  icon="ui-icon-extlink" disabled="#{_disabled}" title="#{bundle.Select}"
