--- a/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
@@ -93,13 +93,13 @@
                 
                 <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
                 <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
-                    <p:outputLabel value="#{bundle.Post}:" />
-                    <ui:include src="/view/common/item-select-list-btn.xhtml" >
+                    <p:outputLabel value="#{bundle.MainStaff}:" />
+                    <ui:include src="/view/common/item-select-btn.xhtml" >
                         <ui:param name="_itemValue" value="#{userCardBean.editedItem.staff}"/>
                         <ui:param name="_itemLabel" value="name"/>
-                        <ui:param name="_required" value="#{true}" />
+                        <ui:param name="_required" value="#{false}"/>
                         <ui:param name="_disabled" value="#{userCardBean.readOnly}"/>
-                        <ui:param name="_converter" value="staffConvertor" />
+                        <ui:param name="_validateAction" value="validateStaff"/>
                         <ui:param name="_itemPanel" value="staffPanel"/>
                         <ui:param name="_titleItem" value="#{bundle.Post}"/>
                         <ui:param name="_selectorBean" value="#{staffBean}"/>
@@ -174,7 +174,7 @@
                 <p:outputLabel value="#{bundle.Folder}" />
                 <ui:include src="/view/common/item-select-btn.xhtml" >
                     <ui:param name="_itemValue" value="#{_bean.editedItem.inbox}"/>
-                    <ui:param name="_itemLabel" value="#{_bean.editedItem.inbox.path}"/>
+                    <ui:param name="_itemLabel" value="nameEndElipse"/>
                     <ui:param name="_required" value="#{false}" />
                     <ui:param name="_disabled" value="#{_bean.isReadOnly()}"/>
                     <ui:param name="_itemPanel" value="folderPanel"/>
